# mjolnir

./: .env.example  .gitignore  README.md  app.py  example-vuln-submission.json  main.py  overview.md  pyproject.toml  submission-form.html
config/: models.yaml
docs/dev-sessions/2025-12-10-1003-planning/: phase1-context.md  phase2-context.md  phase3-context.md  phase4-context.md  phase5-context.md  plan.md  spec.md
models/: config.py  database.py  jef_scorer.py  openrouter_client.py  statistics.py  submission.py  test_runner.py
templates/: index.html  new_session.html  results.html  session_detail.html  sessions.html  settings.html  submission_output.html  submit_form.html
utils/: rescore_results.py
